# test_evrone

./: Makefile  README.md  alembic.ini  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: df75d379bd92_initial_migration.py
app/: main.py  wait_for_services.py  worker.py
app/api/: api.py  transcription.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: transcription.py
app/services/: common.py  kafka_consumer.py  saver.py  stats.py  transcription.py
docker/: .env.example  Dockerfile  Dockerfile.migrate  docker-compose.yml
